--- a/app/views/rich/files/_file.html.erb
+++ b/app/views/rich/files/_file.html.erb
@@ -1,5 +1,5 @@
 <li class="clickable">
-  <img  id="file<%= file.id %>"
+  <img  width="100" height="100" id="file<%= file.id %>"
         src="<%= thumb_for_file(file) %>" 
         data-uris="<%= file.uri_cache %>"
         data-rich-asset-id="<%= file.id %>"
