--- a/app/assets/javascripts/rich/base.js.erb
+++ b/app/assets/javascripts/rich/base.js.erb
@@ -1,5 +1,5 @@
 // Wire up Rich
 //= require rich/editor/ckeditor_path
-//= require ckeditor/ckeditor
+//= require ckeditor/init
 //= require rich/editor/rich_editor
 //= require rich/editor/rich_picker
